ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/lambda_negative_time.rs
use iac_macro::iac;

fn main() {
    iac! {
        lambda name mem -10
    }
}
